Add schema/code for updating a todo item
