# schemas/swagger.yml
@@ -82,16 +82,34 @@ paths:
           schema:
             $ref: "#/definitions/error"
   /{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+    put:
+      tags:
+        - todos
+      operationId: updateOne
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/item"
+      responses:
+        200:
+          description: updated
+          schema:
+            $ref: "#/definitions/item"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
     delete:
       tags:
         - todos
       operationId: destroyOne
-      parameters:
-        - type: integer
-          format: int64
-          name: id
-          in: path
-          required: true
       responses:
         204:
           description: deleted
